<resources>
    <string name="app_name">SPEED CALCULATOR</string>
    <string name="enter_distance">Enter distance (meter)</string>
    <string name="enter_time">Enter time (second)</string>
    <string name="clear_button">CLEAR</string>
    <string name="calculate_button">CALCULATE</string>
    <string name="average_speed_text">Average Speed (km/h)</string>
    <string name="distance_time_required">Distance and time are required.</string>
    <string name="time_than_zero">Time must be greater than zero.</string>
    <string name="speed_over">Speed is over limit!</string>
</resources>